--- a/HMConApp/MainWindow.xaml
+++ b/HMConApp/MainWindow.xaml
@@ -1,11 +1,12 @@
-﻿<Window x:Class="HMConApp.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HMConApp"
+        xmlns:Controls="clr-namespace:HMConApp.Controls" x:Class="HMConApp.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="553.576" Width="830.096">
+        Title="MainWindow" Height="553.576" Width="830.096" Background="White" UseLayoutRounding="True" SnapsToDevicePixels="True">
     <Grid x:Name="MainGrid" Margin="0">
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -16,55 +17,74 @@
         </Grid.ColumnDefinitions>
         <Grid x:Name="VerticalSplit" Margin="0,0,5,5">
             <Grid.RowDefinitions>
-                <RowDefinition Height="23*"/>
-                <RowDefinition Height="51*"/>
+                <RowDefinition Height="199"/>
+                <RowDefinition/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <GridSplitter x:Name="gridSplitter2" HorizontalAlignment="Stretch" Height="5" VerticalAlignment="Bottom" Margin="0"/>
-            <ListView Name="InputList" Margin="0,0,0,34.96" SelectionMode="Single" SelectionChanged="OnInputSelectionChanged">
+            <ListView x:Name="InputList" SelectionMode="Single" SelectionChanged="OnInputSelectionChanged" MinHeight="50" Margin="0,22,0,100">
                 <ListView.View>
                     <GridView AllowsColumnReorder="False">
-                        <GridViewColumn Header="Filename" Width="250" DisplayMemberBinding="{Binding Description}"/>
+                        <GridViewColumn Header="Filename" Width="250" DisplayMemberBinding="{Binding Mode=OneWay}"/>
                         <GridViewColumn Header="Ext." Width="50" DisplayMemberBinding="{Binding Identifier}"/>
                     </GridView>
                 </ListView.View>
             </ListView>
-            <Grid Height="19.96" VerticalAlignment="Bottom" Margin="5,0,5,10">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <Button x:Name="AddFileButton" Content="Add file ..." Margin="0,0,2.5,0" Click="OnAddFile"/>
-                <Button x:Name="RemoveFileButton" Content="Remove selected" Grid.Column="1" Margin="2.5,0" Click="OnRemoveSelectedFile"/>
-                <Button x:Name="PreviewFileButton" Content="Show in preview" Grid.Column="2" Margin="2.5,0,0,0"/>
-            </Grid>
-            <StackPanel Grid.Row="1" >
-                <Expander x:Name="expander" Header="Modification" VerticalAlignment="Top" Margin="0" FontWeight="Bold">
-                    <ScrollViewer Margin="0">
-                        <StackPanel x:Name="ModificationStack" Margin="0,0,5,0">
-                            <ToolBar x:Name="toolBar" VerticalAlignment="Top">
-                                <ComboBox x:Name="modificatorDropDown" Width="150" VerticalAlignment="Center" Margin="0,0,0,-1.96" ToolTip="Adds a new Modificator from the list of installed Modificators" Text="Add Modificator" Focusable="True" IsTabStop="False" IsTextSearchEnabled="False" IsReadOnly="True" SelectedIndex="0" DropDownClosed="OnModificatorDropdownClose">
-                                    <ComboBoxItem Content="- Add Modificator -" IsEnabled="False"/>
-                                    <ComboBoxItem Content="Hoi"/>
-                                    <ComboBoxItem Content="Pick me please"/>
-                                </ComboBox>
-                                <ToolBarPanel Height="20" VerticalAlignment="Top" Width="100">
-                                    <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Width="100"/>
-                                </ToolBarPanel>
-                            </ToolBar>
-                            <GroupBox x:Name="groupBox" Header="GroupBox"/>
-                        </StackPanel>
-                    </ScrollViewer>
-                </Expander>
-                <Expander x:Name="expander_Copy" Header="Formats" FontWeight="Bold" VerticalAlignment="Top" HorizontalContentAlignment="Left" Margin="0">
-                    <Grid Background="#FFE5E5E5" Margin="0" HorizontalAlignment="{Binding HorizontalAlignment, Mode=OneWayToSource, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ContentPresenter}}}">
-                        <CheckBox x:Name="checkBox1" Content="CheckBox" HorizontalAlignment="Left" Margin="0,0,0,-0.001" VerticalAlignment="Top"/>
+            <DockPanel LastChildFill="False" Margin="0,0,0,5" VerticalAlignment="Bottom">
+                <StackPanel Margin="0" Orientation="Vertical" DockPanel.Dock="Bottom">
+                    <Grid VerticalAlignment="Top">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Button x:Name="AddFileButton" Content="Add file ..." Margin="0,0,2,0" Click="OnAddFile"/>
+                        <Button x:Name="RemoveFileButton" Content="Remove selected" Grid.Column="1" Margin="2,0" Click="OnRemoveSelectedFile"/>
+                        <Button x:Name="PreviewFileButton" Content="Show in preview" Grid.Column="2" Margin="2,0,0,0"/>
                     </Grid>
-                </Expander>
-            </StackPanel>
+                    <Separator Margin="0" Height="10"/>
+                    <TextBlock x:Name="textBlock" TextWrapping="Wrap" Text="Output" Height="20" FontWeight="Bold"/>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="7*"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <TextBox x:Name="outputPathBox" TextWrapping="Wrap" Text="TextBox"/>
+                        <Button x:Name="button1" Content="..." VerticalAlignment="Top" Grid.Column="1" Margin="5,0,0,0"/>
+                    </Grid>
+                    <Button x:Name="button2" Content="Export" VerticalAlignment="Top" Background="#FFFFC279" FontWeight="Bold" FontStyle="Italic" Padding="1,0" Click="OnExportClick"/>
+                </StackPanel>
+            </DockPanel>
+            <GridSplitter x:Name="gridSplitter2" HorizontalAlignment="Stretch" Height="5" VerticalAlignment="Bottom" Margin="0"/>
+            <ScrollViewer Grid.Row="1" >
+                <StackPanel >
+                    <Expander x:Name="expander" Header="Modification" VerticalAlignment="Top" Margin="0" FontWeight="Bold" UseLayoutRounding="True">
+                        <Grid Margin="0">
+                            <Button x:Name="button" Content="Apply chain" HorizontalAlignment="Left" Width="100" Margin="160,5,0,0" Height="22" VerticalAlignment="Top" FontWeight="Normal"/>
+                            <ComboBox x:Name="modificatorDropDown" VerticalAlignment="Top" Margin="5,5,0,0" ToolTip="Adds a new Modificator from the list of installed Modificators" Focusable="True" IsTabStop="False" IsTextSearchEnabled="False" IsReadOnly="True" SelectedIndex="0" DropDownClosed="OnModificatorDropdownClose" HorizontalAlignment="Left" FontWeight="Normal" Width="150">
+                                <StackPanel Orientation="Horizontal" Height="16">
+                                    <Image x:Name="image" Source="Resources/icon_add.png" Margin="0"/>
+                                    <ComboBoxItem Content="- Add Modifier -" IsEnabled="False" Height="20" Margin="0,-2,0,0" HorizontalContentAlignment="Left" VerticalContentAlignment="Top"/>
+                                </StackPanel>
+                            </ComboBox>
+                            <StackPanel Margin="0,28,0,0" x:Name="ModificationStack">
+                                <Controls:ModifierStackEntry/>
+                            </StackPanel>
+                        </Grid>
+                    </Expander>
+                    <Expander x:Name="expander_Copy" Header="Formats" FontWeight="Bold" VerticalAlignment="Top" HorizontalContentAlignment="Left" Margin="0">
+                        <WrapPanel x:Name="exportFormatToggleList" ItemWidth="150" ItemHeight="20">
+                            <CheckBox x:Name="checkBox" Content="CheckBox"/>
+                            <CheckBox x:Name="checkBox_Copy" Content="CheckBox"/>
+                            <CheckBox x:Name="checkBox_Copy1" Content="CheckBox"/>
+                            <CheckBox x:Name="checkBox_Copy2" Content="CheckBox"/>
+                            <CheckBox x:Name="checkBox_Copy3" Content="CheckBox"/>
+                        </WrapPanel>
+                    </Expander>
+                </StackPanel>
+            </ScrollViewer>
+            <TextBlock x:Name="textBlock_Copy" TextWrapping="Wrap" Text="Input" FontWeight="Bold" Margin="0,2,0,128" VerticalAlignment="Top"/>
         </Grid>
         <GridSplitter x:Name="gridSplitter" Width="5" Margin="0"/>
         <Grid Grid.Column="1" Margin="5">
